--- a/src/app/pages/settings/relays/relays.component.html
+++ b/src/app/pages/settings/relays/relays.component.html
@@ -18,7 +18,8 @@
           </button>
         </div>
 
-        <mat-card>
+        <mat-card class="user-relays-card">
+          <app-info-tooltip [content]="userRelaysInfoContent" ariaLabel="Learn how user relays work"></app-info-tooltip>
           <mat-card-header>
             <mat-card-title>User Relays</mat-card-title>
             <mat-card-subtitle>You have {{ relays().length }} relays
@@ -121,37 +122,6 @@
           </mat-card-content>
         </mat-card>
         }
-
-        <mat-card class="info-card">
-          <mat-card-header>
-            <mat-card-title>
-              <div class="info-title">
-                <mat-icon class="info-icon">info</mat-icon>
-                How Your Relays Work
-              </div>
-            </mat-card-title>
-          </mat-card-header>
-          <mat-card-content>
-            <p>
-              User Relays are used to publish your profile and events for others
-              to discovery.
-            </p>
-            <p>
-              User Relays is your Home. This is where your data is stored and
-              persisted. It's where other users retrieve your events from. Make
-              sure you choose a relay that you trust and that is reliable.
-            </p>
-            <p>
-              You should normally not need more than four relays. You don't need
-              to pick the most popular relays, other user's will still find you
-              thanks to Discovery Relays.
-            </p>
-            <p>
-              When you save User Relays, your Relays List is additionally
-              publishes to the Discovery Relays to help others find you.
-            </p>
-          </mat-card-content>
-        </mat-card>
       </div>
     </mat-tab>
 
@@ -185,7 +155,9 @@
           </button>
         </div>
 
-        <mat-card>
+        <mat-card class="discovery-relays-card">
+          <app-info-tooltip [content]="discoveryRelaysInfoContent"
+            ariaLabel="Learn how discovery relays work"></app-info-tooltip>
           <mat-card-header>
             <mat-card-title>Discovery Relays</mat-card-title>
             <mat-card-subtitle>These relays are used for discovery of Relay Lists of
@@ -227,40 +199,71 @@
             }
           </mat-card-content>
         </mat-card>
-
-        <!-- Information card about Discovery Relays -->
-        <mat-card class="info-card">
-          <mat-card-header>
-            <mat-card-title>
-              <div class="info-title">
-                <mat-icon class="info-icon">info</mat-icon>
-                How Discovery Relays Work
-              </div>
-            </mat-card-title>
-          </mat-card-header>
-          <mat-card-content>
-            <p>
-              Discovery Relays are used to find which relays other Nostr users
-              prefer. Nostria will attempt to retrieve the User Relay list
-              (kind:10002 events) from these relays, not the profile or other
-              events.
-            </p>
-            <p>
-              After a user's preferred relays have been discovered, Nostria
-              connects to the user's preferred relays to retrieve profile,
-              posts, and other events.
-            </p>
-            <p>
-              You should normally not need more than one or two discovery
-              relays.
-            </p>
-            <p>
-              When you save Your Relays, they are additionally publishes to
-              these Discovery Relays to help others discover You.
-            </p>
-          </mat-card-content>
-        </mat-card>
       </div>
     </mat-tab>
   </mat-tab-group>
+
+  <!-- Template definitions for tooltip content -->
+  <ng-template #userRelaysInfoContent>
+    <mat-card-header>
+      <mat-card-title>
+        <div class="info-title">
+          <mat-icon class="info-icon">info</mat-icon>
+          How Your Relays Work
+        </div>
+      </mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <p>
+        User Relays are used to publish your profile and events for others
+        to discovery.
+      </p>
+      <p>
+        User Relays is your Home. This is where your data is stored and
+        persisted. It's where other users retrieve your events from. Make
+        sure you choose a relay that you trust and that is reliable.
+      </p>
+      <p>
+        You should normally not need more than four relays. You don't need
+        to pick the most popular relays, other user's will still find you
+        thanks to Discovery Relays.
+      </p>
+      <p>
+        When you save User Relays, your Relays List is additionally
+        publishes to the Discovery Relays to help others find you.
+      </p>
+    </mat-card-content>
+  </ng-template>
+
+  <ng-template #discoveryRelaysInfoContent>
+    <mat-card-header>
+      <mat-card-title>
+        <div class="info-title">
+          <mat-icon class="info-icon">info</mat-icon>
+          How Discovery Relays Work
+        </div>
+      </mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <p>
+        Discovery Relays are used to find which relays other Nostr users
+        prefer. Nostria will attempt to retrieve the User Relay list
+        (kind:10002 events) from these relays, not the profile or other
+        events.
+      </p>
+      <p>
+        After a user's preferred relays have been discovered, Nostria
+        connects to the user's preferred relays to retrieve profile,
+        posts, and other events.
+      </p>
+      <p>
+        You should normally not need more than one or two discovery
+        relays.
+      </p>
+      <p>
+        When you save Your Relays, they are additionally publishes to
+        these Discovery Relays to help others discover You.
+      </p>
+    </mat-card-content>
+  </ng-template>
 </div>
