--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,17 +17,13 @@ html {
   // --mat-subtitle-text-color: rgba(0, 0, 0, 0.7);
   // --mat-card-container-color: white;
 
-  @include mat.theme(
-    (
-      color: (
-        theme-type: light,
+  @include mat.theme((color: (theme-type: light,
         primary: nostria-theme.$primary-palette,
         tertiary: nostria-theme.$tertiary-palette,
       ),
       typography: Roboto,
       density: 0,
-    )
-  );
+    ));
 }
 
 .dark {
@@ -46,14 +42,10 @@ html {
   // --mat-subtitle-text-color: rgba(255, 255, 255, 0.7);
   // --mat-card-container-color: #424242;
 
-  @include mat.theme(
-    (
-      color: (
-        theme-type: dark,
+  @include mat.theme((color: (theme-type: dark,
         primary: nostria-theme.$primary-palette,
       ),
-    )
-  );
+    ));
 }
 
 // Global styles
@@ -351,6 +343,16 @@ body {
 
 .dark .blur-backdrop.cdk-overlay-container .cdk-overlay-dark-backdrop {
   background: rgba(0, 0, 0, 0.7);
+}
+
+// Info tooltip overlay styles
+.cdk-overlay-transparent-backdrop {
+  background: transparent;
+}
+
+.cdk-overlay-pane .tooltip-content-card {
+  box-shadow: var(--mat-sys-level4);
+  border: 1px solid var(--mat-sys-outline-variant);
 }
 
 // About page styles
