refactor: Clean up styles and improve tooltip integration in settings and privacy components

--- a/src/app/components/info-tooltip/info-tooltip.component.scss
+++ b/src/app/components/info-tooltip/info-tooltip.component.scss
@@ -1,8 +1,8 @@
 .info-tooltip-trigger {
-  position: absolute;
-  top: 16px;
-  right: 16px;
-  z-index: 2;
+  // position: absolute;
+  // top: 16px;
+  // right: 16px;
+  // z-index: 2;
 
   mat-icon {
     opacity: 0.7;
