--- a/src/styles.scss
+++ b/src/styles.scss
@@ -882,6 +882,12 @@ iframe {
   padding: 0;
 }
 
+.subtitle {
+  margin-top: -16px;
+  margin-bottom: 24px;
+  opacity: 0.7;
+}
+
 /* Global fullscreen video container */
 .global-fullscreen-video {
   position: fixed;
