test theme color

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -4,106 +4,106 @@
 @use 'sass:map';
 @use '@angular/material' as mat;
 
-// Note: Color palettes are generated from primary: #ffffff
+// Note: Color palettes are generated from primary: #1E90FF
 $_palettes: (
-  primary: (
+   primary: (
     0: #000000,
-    10: #1a1c1c,
-    20: #2f3131,
-    25: #3a3c3c,
-    30: #454747,
-    35: #515353,
-    40: #5d5f5f,
-    50: #767777,
-    60: #909191,
-    70: #aaabab,
-    80: #c6c6c7,
-    90: #e2e2e2,
-    95: #f0f1f1,
-    98: #f9f9f9,
-    99: #fcfcfc,
+    10: #001c3a,
+    20: #00315f,
+    25: #003c72,
+    30: #004786,
+    35: #00539a,
+    40: #005faf,
+    50: #0078da,
+    60: #2792ff,
+    70: #72adff,
+    80: #a5c8ff,
+    90: #d4e3ff,
+    95: #ebf1ff,
+    98: #f9f9ff,
+    99: #fdfcff,
     100: #ffffff,
   ),
   secondary: (
     0: #000000,
-    10: #1b1c1c,
-    20: #303030,
-    25: #3b3b3b,
-    30: #474747,
-    35: #525252,
-    40: #5e5e5e,
-    50: #777777,
-    60: #919090,
-    70: #acabab,
-    80: #c8c6c6,
-    90: #e4e2e2,
-    95: #f2f0f0,
-    98: #fbf9f8,
-    99: #fefcfb,
+    10: #001c3a,
+    20: #0c3159,
+    25: #1b3c65,
+    30: #284871,
+    35: #35537e,
+    40: #415f8a,
+    50: #5a78a5,
+    60: #7492c0,
+    70: #8faddc,
+    80: #aac8f9,
+    90: #d4e3ff,
+    95: #ebf1ff,
+    98: #f9f9ff,
+    99: #fdfcff,
     100: #ffffff,
   ),
   tertiary: (
     0: #000000,
-    10: #1a1c1c,
-    20: #2f3131,
-    25: #3a3c3c,
-    30: #454747,
-    35: #515353,
-    40: #5d5f5f,
-    50: #767777,
-    60: #909191,
-    70: #aaabab,
-    80: #c6c6c7,
-    90: #e2e2e2,
-    95: #f0f1f1,
-    98: #f9f9f9,
-    99: #fcfcfc,
+    10: #330045,
+    20: #53006f,
+    25: #640184,
+    30: #711891,
+    35: #7f299e,
+    40: #8c37ab,
+    50: #a852c6,
+    60: #c46ce2,
+    70: #e187ff,
+    80: #eeb0ff,
+    90: #fad7ff,
+    95: #ffebff,
+    98: #fff7fb,
+    99: #fffbff,
     100: #ffffff,
   ),
   neutral: (
     0: #000000,
-    10: #1c1b1b,
-    20: #313030,
-    25: #3c3b3b,
-    30: #474646,
-    35: #535252,
-    40: #5f5e5e,
-    50: #787776,
-    60: #929090,
-    70: #adabaa,
-    80: #c9c6c5,
-    90: #e5e2e1,
-    95: #f4f0ef,
-    98: #fcf8f8,
-    99: #f6feff,
+    10: #181c22,
+    20: #2d3138,
+    25: #383b43,
+    30: #43474e,
+    35: #4f525a,
+    40: #5b5e66,
+    50: #74777f,
+    60: #8d9199,
+    70: #a8abb4,
+    80: #c3c6d0,
+    90: #e0e2ec,
+    95: #eef0fa,
+    98: #f9f9ff,
+    99: #fdfcff,
     100: #ffffff,
-    4: #0e0e0e,
-    6: #141313,
-    12: #201f1f,
-    17: #2a2a2a,
-    22: #353434,
-    24: #3a3939,
-    87: #ddd9d9,
-    92: #ebe7e7,
-    94: #f1edec,
-    96: #f6f3f2,
+    4: #0a0e15,
+    6: #10141a,
+    12: #1c2027,
+    17: #262a31,
+    22: #31353c,
+    24: #353941,
+    87: #d7dae3,
+    92: #e5e8f1,
+    94: #ebeef7,
+    96: #f1f3fd,
   ),
   neutral-variant: (
     0: #000000,
-    10: #181c1d,
-    20: #2d3132,
-    25: #383c3d,
-    30: #444748,
-    35: #4f5354,
-    40: #5b5f60,
-    50: #747878,
-    60: #8e9192,
-    70: #a8acac,
-    80: #c4c7c8,
-    90: #e0e3e3,
-    95: #eef1f2,
-    98: #f7fafa,
-    99: #fafdfd,
+    10: #151c27,
+    20: #2a313c,
+    25: #353c48,
+    30: #404753,
+    35: #4c535f,
+    40: #585f6b,
+    50: #707785,
+    60: #8a919f,
+    70: #a5abba,
+    80: #c0c7d6,
+    90: #dce3f2,
+    95: #ebf1ff,
+    98: #f9f9ff,
+    99: #fdfcff,
     100: #ffffff,
   ),
   error: (
