refactor: Update app title structure to improve routing and accessibility

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -25,8 +25,8 @@
     </button>
     } @if (!layout.search()) {
     <app-navigation></app-navigation>
-    <span class="app-title title-font hide-small" [routerLink]="['/']">
-      {{title}}
+    <span class="app-title title-font hide-small">
+      <span [routerLink]="['/']">{{title}}</span>
       <a [routerLink]="['/beta']" class="beta-indicator">BETA</a>
     </span>
     }
