feat: show if the post is reposted already
Reworked Event component to load reposts internally (using DataService).

--- a/src/app/pages/event/event.component.html
+++ b/src/app/pages/event/event.component.html
@@ -1,10 +1,6 @@
 <h1></h1>
 
-<app-event
-  [event]="event()"
-  appearance="plain"
-  [repostsCount]="reposts().length"
-></app-event>
+<app-event [event]="event()" appearance="plain"></app-event>
 
 <div class="reactions">
   @for (reaction of reactions(); track reaction.emoji) {
