--- a/src/app/components/event/event.component.html
+++ b/src/app/components/event/event.component.html
@@ -29,19 +29,22 @@
       <app-reply-button [event]="targetItem.event"></app-reply-button>
 
       @if (app.enabledFeature('beta')) {
-        @if (repostsCount() > 0) {
+        @if (reposts().length > 0) {
           <button
             mat-button
+            [ngClass]="{
+              active: isReposted(),
+            }"
             (click)="repostService.repostNote(targetItem.event)"
           >
             <mat-icon>repeat</mat-icon>
-            {{ repostsCount() }}
+            {{ reposts().length }}
           </button>
         } @else {
           <button
             mat-icon-button
             [ngClass]="{
-              active: repostService.isReposted(targetItem.event.id),
+              active: isReposted(),
             }"
             (click)="repostService.repostNote(targetItem.event)"
           >
