--- a/src/app/components/event/event.component.html
+++ b/src/app/components/event/event.component.html
@@ -1,5 +1,6 @@
 @let item = record();
 @let targetItem = repostedRecord() || item;
+@let myRepostItem = myRepost();
 
 @if (targetItem && item) {
   <mat-card class="note-card" [class.plain]="isPlain()" appearance="outlined">
@@ -29,27 +30,34 @@
       <app-reply-button [event]="targetItem.event"></app-reply-button>
 
       @if (app.enabledFeature('beta')) {
-        @if (reposts().length > 0) {
+        @if (!!myRepostItem) {
           <button
             mat-button
-            [ngClass]="{
-              active: !!myRepost(),
-            }"
-            (click)="toggleRepost()"
+            class="active"
+            (click)="repostService.deleteRepost(myRepostItem.event)"
           >
             <mat-icon>repeat</mat-icon>
             {{ reposts().length }}
           </button>
         } @else {
-          <button
-            mat-icon-button
-            [ngClass]="{
-              active: !!myRepost(),
-            }"
-            (click)="toggleRepost()"
-          >
+          <button mat-button [matMenuTriggerFor]="menu">
             <mat-icon>repeat</mat-icon>
+            {{ reposts().length }}
           </button>
+
+          <mat-menu #menu="matMenu">
+            <button
+              mat-menu-item
+              (click)="repostService.repostNote(targetItem.event)"
+            >
+              <mat-icon>repeat</mat-icon>
+              <span>Repost</span>
+            </button>
+            <button mat-menu-item (click)="createQuote()">
+              <mat-icon>format_quote</mat-icon>
+              <span>Quote</span>
+            </button>
+          </mat-menu>
         }
       }
 
